@@ -21,6 +21,8 @@
   current directory.
 - fixed a bug with 'x' crashing the sleep console when the expression 
   had a syntax error.
+- added a -c/--check option to the sleep interpreter to specify the script
+  should be parsed and checked for syntax errors but not run.
 
 2.1-beta 8  (29 Oct 06)
 ===========
